--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -6,7 +6,7 @@
     </ion-button>
     <div>
       <ion-title>Class-CheckIn:</ion-title>
-      <ion-title>Estudiantes</ion-title>
+      <ion-title>Docentes</ion-title>
     </div>
   </div>
   
