--- a/src/app/pages/clase/clase.page.html
+++ b/src/app/pages/clase/clase.page.html
@@ -2,8 +2,8 @@
 
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button (click)="mostrarMenu()">
-        <ion-icon name="menu-outline"></ion-icon>
+      <ion-button (click)="goBack()">
+        <ion-icon name="chevron-back-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-title>
